Fix text overflow in minimized navbar

--- a/scss/dashboard/_navbar.scss
+++ b/scss/dashboard/_navbar.scss
@@ -59,6 +59,10 @@
 
 }
 
+.navbar-nav > .nav-link {
+  overflow-wrap: anywhere;
+}
+
 .sidebar {
   width: $sidebar-collapsed-width !important;
   background-color: $gray-900;
